更新依赖版本；修改为新的server地址